--- a/css/index.scss
+++ b/css/index.scss
@@ -476,7 +476,7 @@ a{
         display: block;
         position: absolute;
         width: 100%;
-        max-height: 350px;
+        height: 240px;
         img{
             width: 100%;
             height: 100%;
@@ -627,6 +627,36 @@ a{
                 animation-delay: 5.25s;
             }
             &.delay9{
+                animation-delay: 5.5s;
+            }
+            &.transition1{
+                animation-delay: 1s;
+            }
+            &.transition2{
+                animation-delay: 1.25s;
+            }
+            &.transition3{
+                animation-delay: 1.5s;
+            }
+            &.transition4{
+                animation-delay: 1.75s;
+            }
+            &.transition5{
+                animation-delay: 3s;
+            }
+            &.transition6{
+                animation-delay: 3.25s;
+            }
+            &.transition7{
+                animation-delay: 3.5s;
+            }
+            &.transition8{
+                animation-delay: 5s;
+            }
+            &.transition9{
+                animation-delay: 5.25s;
+            }
+            &.transition10{
                 animation-delay: 5.5s;
             }
             &--title{
