13nd Commit - Last restaurant
Added "A la francaise" and "Le délice des sens", and change the white space for a card

--- a/css/index.css
+++ b/css/index.css
@@ -939,6 +939,10 @@ a {
   font-size: 1.1em;
 }
 
+.secondPage .menu__item--title.wrap {
+  white-space: normal;
+}
+
 .secondPage .menu__item--info {
   overflow: hidden;
   white-space: nowrap;
