--- a/css/index.scss
+++ b/css/index.scss
@@ -665,6 +665,9 @@ a{
             text-overflow: ellipsis;
             margin-bottom: .2em;
             font-size: 1.1em;
+            &.wrap{
+                white-space: normal;
+            }
                 
             }
             &--info{
