--- a/css/index.css
+++ b/css/index.css
@@ -1163,5 +1163,84 @@ a {
   .mainpage .restaurants .card.new::before {
     left: 75%;
   }
+  .secondPage .menu {
+    padding: 4em;
+  }
+  .secondPage .menu__subTitle {
+    margin-bottom: 2em;
+  }
+  .secondPage .menu__entree, .secondPage .menu__plats, .secondPage .menu__desserts {
+    padding-inline: 1em;
+  }
+  .secondPage .menu__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .secondPage .menu__item {
+    max-width: 80%;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .secondPage .menu {
+    padding: 4em;
+  }
+  .secondPage .menu__flexTitle {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .secondPage .menu__subTitle {
+    margin-bottom: 2em;
+    text-align: center;
+    padding-bottom: 1em;
+  }
+  .secondPage .menu__subTitle::after {
+    width: 20%;
+    left: 40%;
+  }
+  .secondPage .menu__entree, .secondPage .menu__plats, .secondPage .menu__desserts {
+    padding-inline: 1em;
+  }
+  .secondPage .menu__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .secondPage .menu__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    min-width: 30%;
+    max-width: 40%;
+    margin-inline: 2em;
+  }
 }
 /*# sourceMappingURL=index.css.map */
