--- a/css/index.scss
+++ b/css/index.scss
@@ -820,4 +820,62 @@ a{
             }
         }
     }
+    .secondPage{
+        .menu{
+            padding: 4em;
+            &__subTitle{
+                margin-bottom: 2em;
+            }
+            &__entree, &__plats, &__desserts{
+                padding-inline: 1em;
+            }
+            &__items{
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+            }
+            &__item{
+                max-width: 80%;
+            }
+        }
+    }
+}
+
+@media screen and (min-width:1400px ) {
+  
+    .secondPage{
+        .menu{
+            padding: 4em;
+            &__flexTitle{
+                display: flex;
+                flex-direction: column;
+            }
+            &__subTitle{
+                margin-bottom: 2em;
+                text-align: center;
+                padding-bottom: 1em;
+                &::after{
+                    width: 20%;
+                    left: 40%;
+                }
+            }
+            &__entree, &__plats, &__desserts{
+                padding-inline: 1em;
+            }
+            &__items{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: wrap;
+            }
+            &__item{
+                display: flex;
+                min-width: 30%;
+                max-width: 40%;
+                margin-inline: 2em;
+            }
+        }
+    }
 }
