--- a/css/index.css
+++ b/css/index.css
@@ -492,7 +492,7 @@ a {
   background-color: var(--tertiary-color);
   position: absolute;
   top: 5%;
-  left: 70%;
+  right: 5%;
   z-index: 3;
   padding: .5em 1em;
   font-size: .9em;
@@ -991,8 +991,7 @@ a {
   top: 0;
   right: 0;
   min-height: 100%;
-  width: 10%;
-  min-width: 50px;
+  width: 50px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1109,7 +1108,13 @@ a {
 
 @media screen and (min-width: 380px) {
   .mainpage .restaurants .card.new::before {
-    left: 85%;
+    right: 5%;
+  }
+  .secondPage .menu__item:hover .menu__checked {
+    right: 10%;
+  }
+  .secondPage .menu__checked {
+    width: 10%;
   }
 }
 
@@ -1161,7 +1166,7 @@ a {
     margin-inline: auto;
   }
   .mainpage .restaurants .card.new::before {
-    left: 75%;
+    right: 5%;
   }
   .secondPage .menu {
     padding: 4em;
@@ -1190,6 +1195,11 @@ a {
   .secondPage .menu__item {
     max-width: 80%;
   }
+  .secondPage .menu__price {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 @media screen and (min-width: 1400px) {
@@ -1204,6 +1214,14 @@ a {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .secondPage .menu__flexTitle--title {
+    font-size: 2em;
+    margin-bottom: .5em;
+  }
+  .secondPage .menu__flexTitle--like {
+    font-size: 2em;
+    margin-bottom: .5em;
   }
   .secondPage .menu__subTitle {
     margin-bottom: 2em;
