--- a/css/index.scss
+++ b/css/index.scss
@@ -56,7 +56,7 @@ a{
     background-color: #222;
     animation: load 3s linear forwards;
     position: absolute;
-    overflow-x: hidden;
+    overflow: hidden;
     .loader{
         position: relative;
         width: 700px;
