--- a/css/index.scss
+++ b/css/index.scss
@@ -55,8 +55,10 @@ a{
     width: 100%;
     background-color: #222;
     animation: load 3s linear forwards;
-    position: absolute;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
     .loader{
         position: relative;
         width: 700px;
@@ -197,6 +199,9 @@ a{
     background-color: #383838;
     padding: 1.5em;
     color: #dddddd;
+    &__mainpage{
+        animation: fadeIn 3.2s linear forwards;
+    }
     &--title{
         font-family: var(--secondary-font);
         font-size: 1em;
